--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
+    "crypto": "^1.0.1",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
