Feat: Refactored mock data to make tests pass, added controller to structure routing and business logic

--- a/nx.json
+++ b/nx.json
@@ -33,7 +33,11 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/payment-e2e/**/*"]
+      "exclude": [
+        "apps/payment-e2e/**/*",
+        "apps/resources/backend-e2e/**/*",
+        "resources-e2e/**/*"
+      ]
     },
     {
       "plugin": "@nx/next/plugin",
