--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
+    "express": "~4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -27,6 +29,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "15.0.6",
+    "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
     "@types/react": "18.3.1",
