--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
+    "aws-sdk": "^2.1626.0",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "express": "~4.18.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "supertest": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
