--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nx/playwright": "19.0.4",
     "@nx/workspace": "19.0.4",
     "@playwright/test": "^1.36.0",
+    "@solana/web3.js": "^1.91.8",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -35,6 +36,7 @@
     "@typescript-eslint/parser": "^7.3.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
+    "bs58": "^5.0.0",
     "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-next": "14.0.4",
