created an express project for each microservice

--- a/nx.json
+++ b/nx.json
@@ -33,7 +33,11 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/payment-e2e/**/*"]
+      "exclude": [
+        "apps/payment-e2e/**/*",
+        "apps/wallet-microservice-e2e/**/*",
+        "apps/wallet-microservice/apps/treasury-microservice-e2e/**/*"
+      ]
     },
     {
       "plugin": "@nx/next/plugin",
@@ -48,6 +52,14 @@
       "plugin": "@nx/playwright/plugin",
       "options": {
         "targetName": "e2e"
+      }
+    },
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview"
       }
     }
   ],
