--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.583.0",
+    "@nrwl/express": "^19.0.7",
     "axios": "^1.6.0",
+    "express": "^4.18.1",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -16,14 +19,19 @@
     "@nx/esbuild": "19.0.4",
     "@nx/eslint": "19.0.4",
     "@nx/eslint-plugin": "19.0.4",
-    "@nx/jest": "19.0.4",
-    "@nx/js": "19.0.4",
+    "@nx/express": "19.0.7",
+    "@nx/jest": "19.0.7",
+    "@nx/js": "19.0.7",
     "@nx/next": "^19.0.4",
-    "@nx/node": "19.0.4",
+    "@nx/node": "19.0.7",
     "@nx/playwright": "19.0.4",
+    "@nx/web": "19.0.7",
+    "@nx/webpack": "19.0.7",
     "@nx/workspace": "19.0.4",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@solana/web3.js": "^1.91.8",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -52,9 +60,11 @@
     "nx": "19.0.4",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "webpack-cli": "^5.1.4"
   }
 }
