--- a/nx.json
+++ b/nx.json
@@ -19,6 +19,11 @@
       "cache": true,
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
+    },
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "plugins": [
@@ -36,7 +41,7 @@
       "exclude": [
         "apps/payment-e2e/**/*",
         "apps/wallet-microservice-e2e/**/*",
-        "apps/wallet-microservice/apps/treasury-microservice-e2e/**/*"
+        "apps/treasury-microservice-e2e/**/*"
       ]
     },
     {
