--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@wallet-microservice/*": ["apps/wallet-microservice/src/*"],
+      "@shared-types/*": ["shared-types/src/lib/*"],
+      "@shared-errors/*": ["shared-types/src/lib/errors/*"],
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
