--- a/nx.json
+++ b/nx.json
@@ -41,7 +41,8 @@
       "exclude": [
         "apps/payment-e2e/**/*",
         "apps/wallet-microservice-e2e/**/*",
-        "apps/treasury-microservice-e2e/**/*"
+        "apps/treasury-microservice-e2e/**/*",
+        "apps/betting-microservice-e2e/**/*"
       ]
     },
     {
