--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@aws-sdk/lib-dynamodb": "^3.583.0",
     "@nrwl/express": "^19.0.7",
     "axios": "^1.6.0",
+    "axios-mock-adapter": "^1.22.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
+    "jest-mock-axios": "^4.7.3",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "supertest": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -40,6 +44,7 @@
     "@types/node": "~18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "autoprefixer": "10.4.13",
