--- a/shared-types/package.json
+++ b/shared-types/package.json
@@ -2,7 +2,8 @@
   "name": "@solspin/shared-types",
   "version": "0.0.1",
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "express": "^4.18.1"
   },
   "type": "commonjs",
   "main": "./src/index.js",
