--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@nrwl/express": "^19.0.7",
     "axios": "^1.6.0",
     "express": "^4.18.1",
+    "kysely": "^0.27.3",
     "next": "14.0.4",
+    "pg": "^8.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tslib": "^2.3.0"
@@ -36,7 +38,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "15.0.6",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
