--- a/apps/backend/base-infrastructure/packages/functions/tsconfig.json
+++ b/apps/backend/base-infrastructure/packages/functions/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@vpc/core/*": ["../core/src/*"]
+      "@base-infrastructure/core/*": ["../core/src/*"]
     }
   }
 }
