--- a/apps/backend/base-infrastructure/package.json
+++ b/apps/backend/base-infrastructure/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vpc",
+  "name": "base-infrastructure",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.41.5",
-    "aws-cdk-lib": "2.132.1",
+    "sst": "^2.43.0",
+    "aws-cdk-lib": "2.142.1",
     "constructs": "10.3.0",
     "typescript": "^5.4.5",
     "@tsconfig/node18": "^18.2.4"
