--- a/apps/backend/base-infrastructure/packages/functions/package.json
+++ b/apps/backend/base-infrastructure/packages/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vpc/functions",
+  "name": "@base-infrastructure/functions",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -7,9 +7,9 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.2",
     "@types/aws-lambda": "^8.10.138",
     "vitest": "^1.6.0",
-    "sst": "^2.41.5"
+    "sst": "^2.43.0"
   }
 }
