--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "supertest": "^7.0.0",
+    "sst": "^2.43.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
