--- a/.gitignore
+++ b/.gitignore
@@ -33,12 +33,13 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+test-ledger
 
 # System Files
 .DS_Store
 Thumbs.db
-
-.nx/cache
+.env
+.nx/*
 
 # Next.js
 .next
