--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sst": "^2.43.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
