--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nrwl/node": "^19.2.2",
     "@nx/devkit": "19.0.4",
     "@nx/esbuild": "19.0.4",
     "@nx/eslint": "19.0.4",
