--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.592.0",
+    "@aws-sdk/lib-dynamodb": "^3.592.0",
+    "@nrwl/cli": "^15.9.3",
+    "@nrwl/workspace": "19.2.2",
+    "@nx/next": "19.2.2",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1637.0",
+    "aws-sdk-mock": "^6.0.3",
     "axios": "^1.6.0",
     "next": "14.0.4",
     "react": "18.3.1",
@@ -13,21 +21,20 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/node": "^19.2.2",
-    "@nx/devkit": "19.0.4",
-    "@nx/esbuild": "19.0.4",
-    "@nx/eslint": "19.0.4",
-    "@nx/eslint-plugin": "19.0.4",
-    "@nx/jest": "19.0.4",
-    "@nx/js": "19.0.4",
-    "@nx/next": "^19.0.4",
-    "@nx/node": "19.0.4",
-    "@nx/playwright": "19.0.4",
-    "@nx/workspace": "19.0.4",
+    "@nrwl/node": "19.2.2",
+    "@nx/devkit": "19.2.2",
+    "@nx/esbuild": "19.2.2",
+    "@nx/eslint": "19.2.2",
+    "@nx/eslint-plugin": "19.2.2",
+    "@nx/jest": "19.2.2",
+    "@nx/js": "19.2.2",
+    "@nx/node": "19.2.2",
+    "@nx/playwright": "19.2.2",
+    "@nx/workspace": "19.2.2",
     "@playwright/test": "^1.36.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
@@ -49,7 +56,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "19.0.4",
+    "nx": "19.2.2",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "tailwindcss": "3.2.7",
