--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@solpin/events": ["@solpin/events/src/index.ts"],
+      "@solpin/types": ["@solpin/types/src/index.ts"],
+      "@solspin/events": ["events/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
