--- a/apps/wallet-microservice/tsconfig.app.json
+++ b/apps/wallet-microservice/tsconfig.app.json
@@ -6,5 +6,5 @@
     "types": ["node", "express"]
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../../shared-types/src/lib/errors/ResourceNotFoundError.ts", "../../shared-types/src/lib/errors/InvalidResourceError.ts", "../../shared-types/src/lib/errors/InsufficientBalanceError.ts", "../../shared-types/src/lib/errors/CustomError.ts", "../../shared-types/src/lib/errors/ErrorHandler.ts"]
+  "include": ["src/**/*.ts", "../../shared-types/src/lib/errors/ResourceNotFoundError.ts", "../../shared-types/src/lib/errors/InvalidResourceError.ts", "../../shared-types/src/lib/errors/InsufficientBalanceError.ts", "../../shared-types/src/lib/errors/CustomError.ts", "../../shared-types/src/lib/errors/ErrorHandler.ts", "src/repository/Repository.ts"]
 }
