--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.592.0",
     "@aws-sdk/lib-dynamodb": "^3.583.0",
-    "@nrwl/express": "^19.0.7",
+    "@nrwl/express": "19.2.2",
     "axios": "^1.6.0",
     "axios-mock-adapter": "^1.22.0",
     "dotenv": "^16.4.5",
@@ -19,26 +20,26 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nx/devkit": "19.0.4",
-    "@nx/esbuild": "19.0.4",
-    "@nx/eslint": "19.0.4",
-    "@nx/eslint-plugin": "19.0.4",
-    "@nx/express": "19.0.7",
-    "@nx/jest": "19.0.7",
-    "@nx/js": "19.0.7",
-    "@nx/next": "^19.0.4",
-    "@nx/node": "19.0.7",
-    "@nx/playwright": "19.0.4",
-    "@nx/web": "19.0.7",
-    "@nx/webpack": "19.0.7",
-    "@nx/workspace": "19.0.4",
+    "@nx/devkit": "19.2.2",
+    "@nx/esbuild": "19.2.2",
+    "@nx/eslint": "19.2.2",
+    "@nx/eslint-plugin": "19.2.2",
+    "@nx/express": "19.2.2",
+    "@nx/jest": "19.2.2",
+    "@nx/js": "19.2.2",
+    "@nx/next": "19.2.2",
+    "@nx/node": "19.2.2",
+    "@nx/playwright": "19.2.2",
+    "@nx/web": "19.2.2",
+    "@nx/webpack": "19.2.2",
+    "@nx/workspace": "19.2.2",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@solana/web3.js": "^1.91.8",
     "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
@@ -62,7 +63,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "19.0.4",
+    "nx": "19.2.2",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
