--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "aws-lambda-mock-context": "^3.2.1",
     "aws-sdk": "^2.1626.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "~4.18.1",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "18.3.1",
