--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@swc-node/register": "^1.9.2",
+    "@swc/core": "^1.5.27",
     "axios": "^1.6.0",
     "next": "14.0.4",
     "react": "18.3.1",
@@ -24,8 +26,6 @@
     "@nx/playwright": "19.0.4",
     "@nx/workspace": "19.0.4",
     "@playwright/test": "^1.36.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.4.0",
