--- a/@solpin/events/package.json
+++ b/@solpin/events/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "@aws-sdk/client-eventbridge": "^3.592.0",
-    "aws-lambda": "^1.0.7",
     "tslib": "^2.3.0",
+    "@solpin/types": "^0.0.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
@@ -16,6 +16,7 @@
     "@solspin/types"
   ],
   "devDependencies": {
+    "aws-lambda": "^1.0.7",
     "@types/aws-lambda": "^8.10.138",
     "@types/uuid": "^9.0.8"
   }
