--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --ignore-scripts
+        uses: nrwl/nx-set-shas@v4
 
       - name: Reset Nx
         run: npx nx reset
