--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --ignore-scripts
-        uses: nrwl/nx-set-shas@v4
 
-      - name: Reset Nx
-        run: npx nx reset
+      - uses: nrwl/nx-set-shas@v4
 
       - name: Run affected commands
         run: |
