--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
     "axios": "^1.6.0",
+    "compare-versions": "^6.1.0",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
