--- a/@solpin/events/project.json
+++ b/@solpin/events/project.json
@@ -14,6 +14,14 @@
         "tsConfig": "@solpin/events/tsconfig.lib.json",
         "assets": ["@solpin/events/*.md"]
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["@solpin/events/**/*.ts"],
+        "eslintConfig": "@solpin/events/.eslintrc.json",
+        "ignorePath": "@solpin/events/.eslintignore"
+      }
     }
   }
 }
