--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.592.0",
+    "@aws-sdk/client-eventbridge": "^3.596.0",
     "@aws-sdk/lib-dynamodb": "^3.583.0",
     "@nrwl/express": "19.2.2",
+    "aws-cdk-lib": "^2.145.0",
     "axios": "^1.6.0",
     "axios-mock-adapter": "^1.22.0",
     "dotenv": "^16.4.5",
@@ -46,6 +48,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "autoprefixer": "10.4.13",
