--- a/apps/backend/base-infrastructure/packages/functions/tsconfig.json
+++ b/apps/backend/base-infrastructure/packages/functions/tsconfig.json
@@ -1,11 +1,6 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": "../../../../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "esnext",
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "@base-infrastructure/core/*": ["../core/src/*"]
-    }
+    "esModuleInterop": true,
   }
 }
