--- a/apps/betting-e2e/project.json
+++ b/apps/betting-e2e/project.json
@@ -1,17 +1,17 @@
 {
-  "name": "betting-microservice-e2e",
+  "name": "betting-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "implicitDependencies": ["betting-microservice"],
+  "implicitDependencies": ["betting"],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "apps/betting-microservice-e2e/jest.config.ts",
+        "jestConfig": "apps/betting-e2e/jest.config.ts",
         "passWithNoTests": true
       },
-      "dependsOn": ["betting-microservice:build"]
+      "dependsOn": ["betting:build"]
     }
   }
 }
