--- a/nx.json
+++ b/nx.json
@@ -42,7 +42,7 @@
         "apps/payment-e2e/**/*",
         "apps/wallet-e2e/**/*",
         "apps/treasury-microservice-e2e/**/*",
-        "apps/betting-microservice-e2e/**/*"
+        "apps/betting-e2e/**/*"
       ]
     },
     {
