--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sst": "^2.43.1",
     "supertest": "^7.0.0",
     "tslib": "^2.3.0",
     "zod": "^3.23.8"
