Feat: Created directory structure

--- a/nx.json
+++ b/nx.json
@@ -43,7 +43,8 @@
         "apps/wallet-e2e/**/*",
         "apps/treasury-microservice-e2e/**/*",
         "apps/betting-e2e/**/*",
-        "apps/game-engine-e2e/**/*"
+        "apps/game-engine-e2e/**/*",
+        "apps/websocket-handler-e2e/**/*"
       ]
     },
     {
