--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "jest-mock-axios": "^4.7.3",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sst": "^2.43.1",
