--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@berenddeboer/nx-sst": "^0.13.5",
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
     "axios": "^1.6.0",
