sst package init

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@swc/core": "^1.5.27",
     "axios": "^1.6.0",
     "compare-versions": "^6.1.0",
+    "constructs": "10.1.156",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -30,6 +31,7 @@
     "@playwright/test": "^1.36.0",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "15.0.6",
+    "@types/aws-lambda": "^8.10.70",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
     "@types/react": "18.3.1",
