--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@swc/core": "^1.5.27",
     "axios": "^1.6.0",
     "compare-versions": "^6.1.0",
-    "constructs": "10.1.156",
+    "constructs": "10.3.0",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sst": "^2.43.0",
+    "sst": "2.43.0",
+    "aws-cdk-lib": "2.142.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
