--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -41,3 +41,4 @@ jobs:
             --maxParallel=3 \
             --base=origin/master \
             --head=HEAD \
+            --verbose
