--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-cdk/core": "^1.204.0",
     "@aws-sdk/client-dynamodb": "^3.598.0",
+    "@aws-sdk/client-eventbridge": "^3.598.0",
     "@aws-sdk/lib-dynamodb": "^3.598.0",
     "@berenddeboer/nx-sst": "^0.13.5",
+    "@faker-js/faker": "^8.4.1",
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
     "aws-cdk-lib": "2.142.1",
     "aws-lambda": "^1.0.7",
+    "aws-sdk-client-mock": "^4.0.1",
     "axios": "^1.6.0",
     "compare-versions": "^6.1.0",
     "constructs": "10.3.0",
@@ -24,6 +28,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@nx/devkit": "19.0.4",
     "@nx/esbuild": "19.0.4",
     "@nx/eslint": "19.0.4",
@@ -63,7 +68,7 @@
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "tailwindcss": "3.2.7",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.5",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
   }
