--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sst": "^2.43.1",
     "supertest": "^7.0.0",
     "tslib": "^2.3.0",
+    "winston": "^3.13.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
