--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,7 +25,8 @@
       "@solspin/wallet-types": ["@solspin/types/src/service/wallet/types.ts"],
       "@solspin/orchestration-types": ["@solspin/types/src/service/orchestration/types.ts"],
       "@solspin/websocket-types": ["@solspin/types/src/service/websocket/types.ts"],
-      "@solspin/game-engine-types": ["@solspin/types/src/service/game-engine/types.ts"]
+      "@solspin/game-engine-types": ["@solspin/types/src/service/game-engine/types.ts"],
+      "@solspin/logger": ["@solspin/utils/logger.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
