--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "aws-cdk-lib": "^2.145.0",
     "axios": "^1.6.0",
     "axios-mock-adapter": "^1.22.0",
+    "dompurify": "^3.1.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "jest-mock-axios": "^4.7.3",
+    "joi": "^17.13.1",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
