Fixed user management

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,7 +27,8 @@
       "@solspin/websocket-types": ["@solspin/types/src/service/websocket/types.ts"],
       "@solspin/game-engine-types": ["@solspin/types/src/service/game-engine/types.ts"],
       "@solspin/logger": ["@solspin/utils/logger.ts"],
-      "@solspin/validator": ["@solspin/utils/validator.ts"]
+      "@solspin/validator": ["@solspin/utils/validator.ts"],
+      "@solspin/user-management-types": ["@solspin/types/src/service/user-management/types.ts"],
     }
   },
   "exclude": ["node_modules", "tmp"]
