--- a/apps/integration/package.json
+++ b/apps/integration/package.json
@@ -22,6 +22,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.600.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
