--- a/package.json
+++ b/package.json
@@ -5,17 +5,30 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-cdk/core": "^1.204.0",
+    "@aws-sdk/client-dynamodb": "^3.598.0",
+    "@aws-sdk/client-eventbridge": "^3.598.0",
+    "@aws-sdk/lib-dynamodb": "^3.598.0",
+    "@berenddeboer/nx-sst": "^0.13.5",
+    "@faker-js/faker": "^8.4.1",
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
+    "aws-cdk-lib": "2.142.1",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk-client-mock": "^4.0.1",
     "axios": "^1.6.0",
     "compare-versions": "^6.1.0",
+    "constructs": "10.3.0",
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sst": "^2.43.0",
-    "tslib": "^2.3.0"
+    "sst": "2.43.0",
+    "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@nx/devkit": "19.0.4",
     "@nx/esbuild": "19.0.4",
     "@nx/eslint": "19.0.4",
@@ -29,10 +42,12 @@
     "@playwright/test": "^1.36.0",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "15.0.6",
+    "@types/aws-lambda": "^8.10.70",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "autoprefixer": "10.4.13",
@@ -53,7 +68,7 @@
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "tailwindcss": "3.2.7",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.5",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
   }
