--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,7 @@
       "@solspin/logger": ["@solspin/utils/logger.ts"],
       "@solspin/validator": ["@solspin/utils/validator.ts"],
       "@solspin/user-management-types": ["@solspin/types/src/service/user-management/types.ts"],
+      "@solspin/betting-schema": ["@solspin/schemas/src/service/betting/schema.ts"],
     }
   },
   "exclude": ["node_modules", "tmp"]
