--- a/@solspin/types/tsconfig.lib.json
+++ b/@solspin/types/tsconfig.lib.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["../../@solpin/types/src/**/*.ts"],
-  "exclude": ["../../@solpin/types/jest.config.ts", "../../@solpin/types/src/**/*.spec.ts", "../../@solpin/types/src/**/*.test.ts"]
+  "include": ["../../@solspin/types/src/**/*.ts"],
+  "exclude": ["../../@solspin/types/jest.config.ts", "../../@solspin/types/src/**/*.spec.ts", "../../@solspin/types/src/**/*.test.ts"]
 }
