--- a/apps/backend/services/betting/tsconfig.json
+++ b/apps/backend/services/betting/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
+    "module": "ESNext",
     "lib": ["ES6"],
     "declaration": true,
     "strict": true,
