--- a/apps/betting/project.json
+++ b/apps/betting/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "betting",
+  "name": "bettings",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/betting/src",
   "projectType": "application",
