--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@aws-sdk/lib-dynamodb": "^3.598.0",
     "@berenddeboer/nx-sst": "^0.13.5",
     "@faker-js/faker": "^8.4.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
     "aws-lambda": "^1.0.7",
@@ -20,6 +21,7 @@
     "next": "14.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-redux": "^9.1.2",
     "sst": "2.43.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
