--- a/apps/backend/services/websocket/package.json
+++ b/apps/backend/services/websocket/package.json
@@ -4,6 +4,7 @@
     "sst": "sst"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.600.0",
     "@solana/web3.js": "^1.93.1",
     "bigint-buffer": "^1.1.5"
   }
