--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "@aws-sdk/client-eventbridge": "^3.598.0",
     "@aws-sdk/lib-dynamodb": "^3.598.0",
     "@berenddeboer/nx-sst": "^0.13.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@faker-js/faker": "^8.4.1",
+    "@mui/icons-material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
     "aws-lambda": "^1.0.7",
@@ -19,6 +25,7 @@
     "compare-versions": "^6.1.0",
     "constructs": "10.3.0",
     "next": "14.0.4",
+    "notistack": "^3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.1.2",
