--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios": "^1.6.0",
     "compare-versions": "^6.1.0",
     "constructs": "10.3.0",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "notistack": "^3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
