--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@swc-node/register": "^1.9.2",
     "@swc/core": "^1.5.27",
+    "@tanstack/react-query": "^5.49.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk-client-mock": "^4.0.1",
     "axios": "^1.6.0",
@@ -29,6 +30,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.1.2",
+    "sonner": "^1.5.0",
     "sst": "2.43.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
