--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
+    "@tanstack/eslint-plugin-query": "^5.49.0",
     "@testing-library/react": "15.0.6",
     "@types/aws-lambda": "^8.10.70",
     "@types/express": "~4.17.13",
