--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@solana/web3.js": "^1.91.8",
-    "@svgr/webpack": "^8.0.1",
+    "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
@@ -85,6 +85,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "next-plugin-svgr": "^1.1.10",
     "nx": "19.2.2",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
